Build the auth configuration